force-app/main/default/objects/Navigation_Rule__c/Navigation_Rule__c.object-meta.xml
<CustomObject>
    <label>Navigation Rule</label>
    <nameField>
        <label>Navigation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>