force-app/main/default/objects/Navigation_Rule__c/fields/Next_Node__c.field-meta.xml
<CustomField>
    <fullName>Next_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Node</label>
    <referenceTo>Questionnaire_Navigation__c</referenceTo>
    <relationshipLabel>Navigation Rules (Next Node)</relationshipLabel>
    <relationshipName>Navigation_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>