force-app/main/default/objects/Navigation_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does Not Contain</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Ends With</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Greater Than Or Equal</fullName>
            </value>
            <value>
                <fullName>Less Than Or Equal</fullName>
            </value>
            <value>
                <fullName>Is Blank</fullName>
            </value>
            <value>
                <fullName>Is Not Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>