force-app/main/default/objects/Navigation_Rule__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Navigation Rules</relationshipLabel>
    <relationshipName>Navigation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>