force-app/main/default/objects/Navigation_Rule__c/fields/Questionnaire_Node__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Node</label>
    <referenceTo>Questionnaire_Navigation__c</referenceTo>
    <relationshipLabel>Navigation Rules</relationshipLabel>
    <relationshipName>Navigation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>